build: api construction

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 
 modulo-2/1-aula-interativa-i/node_modules/
+modulo-2/2-hello-world-api/node_modules/
+modulo-2/3-tests/node_modules/
+modulo-2/4-construcao-api/node_modules/
