build: grades control api

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,14 @@ modulo-2/1-aula-interativa-i/node_modules/
 modulo-2/2-hello-world-api/node_modules/
 modulo-2/3-tests/node_modules/
 modulo-2/4-my-bank-api/node_modules/
+modulo-2/5-trabalho-1/node_modules/
+
+modulo-2/5-trabalho-1/.vscode/
+
+modulo-2/6-finances-api/.vscode/
+
+modulo-2/6-finances-api/node_modules/
+
+modulo-2/7-grades-control-api-desafio2/.vscode/
+
+modulo-2/7-grades-control-api-desafio2/node_modules/
