build: iniciando no react

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@ modulo-2/6-finances-api/node_modules/
 modulo-2/7-grades-control-api-desafio2/.vscode/
 
 modulo-2/7-grades-control-api-desafio2/node_modules/
+
+modulo-3/codigo-fonte-modulo-03-1
+
+codigo-fonte-modulo-03-1.zip
